Arc-Dark: message list first draft code cleanup

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -41,6 +41,7 @@
 @clrTextFadedMore: fade(@clrText, 30%);
 
 @clrBodyBg: #404552;
+@clrBodyBgDarker: darken(@clrBodyBg, 2%);
 
 @clrToolBtnBgHover: rgba(95, 105, 127, 0.37);
 @clrToolBtnBorderHover: rgba(21, 23, 28, 0.37);
