--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -4,131 +4,71 @@
 // Message list area
 //------------------------------------------------------------
 .column-MessageList {
-	background: @colorWindowBg;
-	border-left: 1px solid @colorBorder;
-	padding-top: 12px;
+	background: @clrWindowBg;
+	border-left: 1px solid @clrWindowBorder;
+// 	padding-top: 12px;
 }
 
 #message-list {
-	background: @colorWindowBg;
+	background: @clrWindowBg;
 }
 
 #message-list .messages-wrap .scroll-region-content-inner {
-	padding: 0 20px;
-}
-
-//------------------------------------------------------------
-// Message body
-//------------------------------------------------------------
-#message-list .message-item-wrap {
-	.message-item-white-wrap {
-		box-shadow: none !important;
-		background: @colorBodyBg;
-		border: 1px solid @colorBorder;
-		border-radius: 3px;
-
-		.message-item-area {
-			padding: 0 25px 14px 25px;
-		}
-
-		//---------------------------------
-		// Message header text
-		//---------------------------------
-		.from-contact {
-			font-size: 14px;
-		}
-
-		.to-participants {
-			font-size: 14px;
-
-			&.collapsed {
-				margin-top: 3px;
-			}
-		}
-
-		//---------------------------------
-		// Message header track icon
-		//---------------------------------
-		.message-header-right {
-			.open-tracking-message-status.opened {
-				img.content-mask {
-					background-color: @colorAccent;
-				}
-			}
-		}
-	}
-
-	//---------------------------------
-	// Collapsed message
-	//---------------------------------
-	&.collapsed {
-		.message-item-white-wrap {
-			background-color: @colorBodyBgDarker;
-		}
-
-		.message-item-area {
-			.collapsed-from {
-				color: @colorTextFaded;
-			}
-
-			.collapsed-timestamp {
-				color: @colorTextFaded;
-			}
-
-			.collapsed-snippet {
-				color: @colorTextFaded;
-			}
-		}
-	}
+	padding: 6px 20px;
 }
 
 //------------------------------------------------------------
 // Message subject area
 //------------------------------------------------------------
-#message-list .message-subject-wrap {
-	padding-left: 2px;
-
-	//---------------------------------
-	// Message subject
-	//---------------------------------
-	.message-subject {
-		font-size: 18px;
-		color: @colorText;
+#message-list {
+	.message-subject-wrap {
+		padding-left: 2px;
 	}
 
-	//---------------------------------
-	// Subject area buttons
-	//---------------------------------
+	.message-subject {
+		color: @clrText;
+	}
+
 	.message-icons-wrap {
 		cursor: default;
-	}
 
-	.message-icons-wrap div {
-		background: none;
-		border: 1px solid transparent;
-	 	border-radius: 3px;
-		height: 26px;
-		padding: 0px 13px;
-
-		img.content-mask {
-			margin-top: -6px;
-			background-color: @colorText;
-		}
-
-		&:hover {
-			border-color: @colorBtnBorderLight;
-			background-color: @colorBtnBgLight;
-		}
-
-		&:active {
-			border-color: @colorBtnBorderActiveLight;
-			background-color: @colorBtnBgActiveLight;
+		div {
+			background: none;
+			border: 1px solid transparent;
+		 	border-radius: 3px;
+			height: 26px;
+			padding: 0px 13px;
 
 			img.content-mask {
-				background-color: @colorBtnTextActive;
+				margin-top: -6px;
+				background-color: @clrToolBtnText;
+			}
+
+			&:hover {
+				background-color: @clrToolBtnBgHover;
+				border-color: @clrToolBtnBorderHover;
+			}
+
+			&:active {
+				background-color: @clrToolBtnBgActive;
+				border-color: @clrToolBtnBorderActive;
+
+				img.content-mask {
+					background-color: @clrToolBtnTextActive;
+				}
 			}
 		}
 	}
+}
+
+//------------------------------------------------------------
+// Message body
+//------------------------------------------------------------
+#message-list .message-item-wrap .message-item-white-wrap {
+	box-shadow: none !important;
+	background: @clrBodyBg;
+	border: 1px solid @clrWindowBorder;
+	border-radius: 3px;
 }
 
 //------------------------------------------------------------
@@ -136,7 +76,8 @@
 //------------------------------------------------------------
 .message-participants {
 	.from-contact {
-		color: @colorText;
+		font-size: 14px;
+		color: @clrText;
 	}
 
 	.from-label,
@@ -144,7 +85,8 @@
 	.reply-to-label,
 	.cc-label,
 	.bcc-label {
-		color: @colorTextFaded;
+		color: @clrTextFaded;
+		font-size: 14px;
 	}
 
 	.to-contact,
@@ -152,21 +94,19 @@
 	.cc-contact,
 	.bcc-contact,
 	.to-everyone {
-		color: @colorTextFaded;
+		color: @clrTextFadedLess;
+		font-size: 14px;
 	}
 
 	.expanded-participants {
-		.participant-primary {
-			color: @colorTextFaded;
-		}
-		.participant-secondary {
-			color: @colorTextFaded;
-		}
-		.from-contact .participant-primary {
-			color: @colorText;
-		}
+		.from-contact .participant-primary,
 		.from-contact .participant-secondary {
-			color: @colorText;
+			color: @clrText;
+		}
+
+		.participant-primary,
+		.participant-secondary {
+			color: @clrTextFadedLess;
 		}
 	}
 }
@@ -174,94 +114,73 @@
 #message-list {
 	.message-header {
 		.header-row {
-			color: @colorTextFaded;
+			font-size: 14px;
+
+			.header-label {
+				color: @clrTextFaded;
+			}
+
+			.header-name {
+				color: @clrTextFadedLess;
+			}
 		}
 
 		.message-time,
 		.message-indicator {
-			color: @colorTextFaded;
+			color: @clrTextFaded;
 		}
 	}
 
 	.header-toggle-control img {
-		background: @colorTextFaded;
+		background: @clrTextFaded;
+
+		&:hover {
+			background: @clrText;
+		}
 	}
 }
 
 //------------------------------------------------------------
-// Reply/forward buttons
+// Message header buttons (reply/forward)
 //------------------------------------------------------------
 #message-list .message-header .message-actions-wrap {
 	.button-dropdown.bordered {
-		.primary-item {
+		.primary-item,
+		.secondary-picker {
 			box-shadow: none;
-			background: @colorBodyBg;
+			background: @clrBodyBg;
 			border: 1px solid transparent;
-			border-radius: 3px 0 0 3px;
 
 			img.content-mask {
-				background-color: @colorText;
+				background-color: @clrText;
 			}
+		}
+
+		.primary-item {
+			border-radius: 3px 0 0 3px;
 		}
 
 		.secondary-picker {
-			box-shadow: none;
-			background: @colorBodyBg;
-			border: 1px solid transparent;
 			border-left-width: 0;
 			border-radius: 0 3px 3px 0;
-
-			img.content-mask {
-				background-color: @colorText;
-			}
 		}
 
 		&:hover {
-			.primary-item {
-				background: @colorBtnBgLight;
-				border-color: @colorBtnBorderLight;
-			}
-
+			.primary-item,
 			.secondary-picker {
-				background: @colorBtnBgLight;
-				border-color: @colorBtnBorderLight;
+				background: @clrToolBtnBgHover;
+				border-color: @clrToolBtnBorderHover;
 			}
 		}
 
-		.primary-item:active {
-			background: @colorAccent;
-			border-color: @colorAccent;
-
-			img.content-mask {
-				background-color: @colorBtnTextActive;
-			}
-		}
-
+		.primary-item:active,
 		.secondary-picker:active {
-			background: @colorAccent;
-			border-color: @colorAccent;
+			background: @clrToolBtnBgActive;
+			border-color: @clrToolBtnBorderActive;
 
 			img.content-mask {
-				background-color: @colorBtnTextActive;
+				background-color: @clrToolBtnTextActive;
 			}
-		}
-	}
-}
-
-//------------------------------------------------------------
-// Gmail labels
-//------------------------------------------------------------
-.mail-label.removable {
-	box-shadow: none !important;
-	background: @colorAccent !important;
-	color: @colorBtnTextActive !important;
-	margin-top: 3px;
-
-	img.content-mask {
-		background-color: @colorBtnTextActive !important;
-
-		&:hover {
-			cursor: pointer;
 		}
 	}
 }
@@ -271,25 +190,48 @@
 //------------------------------------------------------------
 #message-list  .footer-reply-area-wrap {
 	box-shadow: none;
-	background: @colorBodyBg;
-	border: 1px solid @colorBorder;
+	background: @clrBodyBg;
+	border: 1px solid @clrWindowBorder;
 	border-radius: 0 0 3px 3px;
 
-	//---------------------------------
-	// Reply icon/text
-	//---------------------------------
-	.footer-reply-area {
-		width: max-content;
-		margin: 9px 12px;
-		font-size: 14px;
-		color: @colorAccent;
+// 	//---------------------------------
+// 	// Reply icon/text
+// 	//---------------------------------
+// 	.footer-reply-area {
+// 		width: max-content;
+// 		margin: 9px 12px;
+// 		font-size: 14px;
+// 		color: @colorAccent;
+//
+// 		img.content-mask {
+// 			background-color: @colorAccent;
+// 		}
+//
+// 		&:hover {
+// 			cursor: pointer;
+// 		}
+// 	}
+}
 
-		img.content-mask {
-			background-color: @colorAccent;
+//------------------------------------------------------------
+// Collapsed message
+//------------------------------------------------------------
+#message-list .message-item-wrap.collapsed {
+	.message-item-white-wrap {
+		background-color: @clrBodyBgDarker;
+	}
+
+	.message-item-area {
+		.collapsed-from {
+			color: @clrTextFadedLess;
 		}
 
-		&:hover {
-			cursor: pointer;
+		.collapsed-timestamp {
+			color: @clrTextFaded;
+		}
+
+		.collapsed-snippet {
+			color: @clrTextFaded;
 		}
 	}
 }
@@ -299,166 +241,220 @@
 //------------------------------------------------------------
 #message-list .minified-bundle {
 	.msg-line {
-		box-shadow: none;
-		border: 1px solid @colorBorder;
+ 		box-shadow: none;
+		background-color: @clrBodyBgDarker;
+		border: 1px solid @clrWindowBorder;
 		border-radius: 3px 3px 0 0;
-		background-color: @colorBodyBgDarker;
 	}
 
 	.num-messages {
-		border: 1px solid @colorBorder;
-		background-color: @colorBodyBg;
-		color: @colorAccent;
+		background-color: @clrBodyBg;
+		border: 1px solid @clrWindowBorder;
+		color: @clrButtonText;
 
 		&:hover {
-			cursor: pointer;
+			background-color: @clrButtonBgHover;
+			border-color: @clrButtonBorderHover;
+		}
+
+		&:active {
+			background-color: @clrButtonBgActive;
+			border-color: @clrButtonBorderActive;
 		}
 	}
 }
 
-//------------------------------------------------------------
-// Message attachments
-//------------------------------------------------------------
-.nylas-attachment-item {
-	//---------------------------------
-	// File attachment box
-	//---------------------------------
-	&.file-attachment-item {
-		.file-thumbnail-preview {
-			border: 1px solid @colorBorder;
-			border-radius: 3px 3px 0 0;
-		}
 
-		.file-info-wrap {
-			background-color: darken(@colorWindowBg, 3%);
-			border: 1px solid @colorBorder;
-			border-radius: 3px 0 0 3px;
-			box-shadow: none;
-		}
 
-		.file-action-icon {
-			background-color: darken(@colorWindowBg, 3%);
-			border: 1px solid @colorBorder;
-			border-left-width: 0px;
-			border-radius: 0 3px 3px 0;
 
-			img.content-mask {
-				background-color: @colorText;
-			}
-
-			&:not(:last-child) {
-				border-radius: 0;
-			}
-
-			&:hover {
-				background-color: darken(@colorWindowBg, 6%);
-			}
-
-			&:active {
-				background-color: @colorAccent;
-
-				img.content-mask {
-					background-color: @colorBtnTextActive;
-				}
-			}
-		}
-
-		&:focus {
-			.file-thumbnail-preview {
-				border-color: @colorAccent;
-			}
-
-			.file-info-wrap {
-				border-color: @colorAccent;
-				border-right-color: @colorBorder;
-			}
-
-			.file-action-icon {
-				border-color: @colorAccent;
-
-				&:not(:last-child) {
-					border-right-color: @colorBorder;
-				}
-			}
-		}
-	}
-	//---------------------------------
-	// Image attachment download button
-	//---------------------------------
-	&.image-attachment-item {
-		.file-action-icon {
-			right: 0px;
-			top: 0px;
-			width: 100%;
-			height: 100%;
-			background: transparent;
-			cursor: pointer;
-
-			img {
-				display: none;
-			}
-		}
-	}
-}
-
-//------------------------------------------------------------
-// Other attachment controls
-//------------------------------------------------------------
-#message-list .download-all {
-	.attachment-number {
-		font-size: 14px;
-	}
-
-	.separator {
-		display: none;
-	}
-
-	.download-all-action {
-		padding-left: 14px;
-		font-size: 14px;
-		color: @colorAccent;
-
-		img.content-mask {
-			background-color: @colorAccent;
-		}
-
-		&:hover {
-			cursor: pointer;
-		}
-	}
-}
-
-//------------------------------------------------------------
-// Message warning bar
-//------------------------------------------------------------
-#message-list .show-hidden-messages {
-	border: none;
-	border-left: 3px solid @colorAccent;
-	border-radius: 0px;
-	background-color: @colorWarningBar;
-	color: @colorTextFaded;
-
-	a {
-		color: @colorAccent;
-		cursor: pointer;
-	}
-}
-
-//------------------------------------------------------------
-// Scroll bars
-//------------------------------------------------------------
-#message-list .scrollbar-track,
-.composer-full-window .scrollbar-track {
-	background: @colorWindowBg;
-	border-left: none;
-	width: 10px;
-
-	.scrollbar-handle {
-		background: fade(darken(@colorBodyBg, 45%), 40%);
-		border: none;
-	}
-}
-
-.composer-full-window .scrollbar-track {
-	background: @colorBodyBg;
-}
+// #message-list .message-item-wrap {
+// 	.message-item-white-wrap {
+//// 		//---------------------------------
+// 		// Message header text
+// 		//---------------------------------
+// 		.to-participants {
+//
+// 			&.collapsed {
+// 				margin-top: 3px;
+// 			}
+// 		}
+//
+// 		//---------------------------------
+// 		// Message header track icon
+// 		//---------------------------------
+// 		.message-header-right {
+// 			.open-tracking-message-status.opened {
+// 				img.content-mask {
+// 					background-color: @colorAccent;
+// 				}
+// 			}
+// 		}
+// 	}
+//
+// }
+// //------------------------------------------------------------
+// // Gmail labels
+// //------------------------------------------------------------
+// .mail-label.removable {
+// 	box-shadow: none !important;
+// 	background: @colorAccent !important;
+// 	color: @colorBtnTextActive !important;
+// 	margin-top: 3px;
+//
+// 	img.content-mask {
+// 		background-color: @colorBtnTextActive !important;
+//
+// 		&:hover {
+// 			cursor: pointer;
+// 		}
+// 	}
+// }
+//
+//
+//
+// //------------------------------------------------------------
+// // Message attachments
+// //------------------------------------------------------------
+// .nylas-attachment-item {
+// 	//---------------------------------
+// 	// File attachment box
+// 	//---------------------------------
+// 	&.file-attachment-item {
+// 		.file-thumbnail-preview {
+// 			border: 1px solid @colorBorder;
+// 			border-radius: 3px 3px 0 0;
+// 		}
+//
+// 		.file-info-wrap {
+// 			background-color: darken(@colorWindowBg, 3%);
+// 			border: 1px solid @colorBorder;
+// 			border-radius: 3px 0 0 3px;
+// 			box-shadow: none;
+// 		}
+//
+// 		.file-action-icon {
+// 			background-color: darken(@colorWindowBg, 3%);
+// 			border: 1px solid @colorBorder;
+// 			border-left-width: 0px;
+// 			border-radius: 0 3px 3px 0;
+//
+// 			img.content-mask {
+// 				background-color: @colorText;
+// 			}
+//
+// 			&:not(:last-child) {
+// 				border-radius: 0;
+// 			}
+//
+// 			&:hover {
+// 				background-color: darken(@colorWindowBg, 6%);
+// 			}
+//
+// 			&:active {
+// 				background-color: @colorAccent;
+//
+// 				img.content-mask {
+// 					background-color: @colorBtnTextActive;
+// 				}
+// 			}
+// 		}
+//
+// 		&:focus {
+// 			.file-thumbnail-preview {
+// 				border-color: @colorAccent;
+// 			}
+//
+// 			.file-info-wrap {
+// 				border-color: @colorAccent;
+// 				border-right-color: @colorBorder;
+// 			}
+//
+// 			.file-action-icon {
+// 				border-color: @colorAccent;
+//
+// 				&:not(:last-child) {
+// 					border-right-color: @colorBorder;
+// 				}
+// 			}
+// 		}
+// 	}
+// 	//---------------------------------
+// 	// Image attachment download button
+// 	//---------------------------------
+// 	&.image-attachment-item {
+// 		.file-action-icon {
+// 			right: 0px;
+// 			top: 0px;
+// 			width: 100%;
+// 			height: 100%;
+// 			background: transparent;
+// 			cursor: pointer;
+//
+// 			img {
+// 				display: none;
+// 			}
+// 		}
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Other attachment controls
+// //------------------------------------------------------------
+// #message-list .download-all {
+// 	.attachment-number {
+// 		font-size: 14px;
+// 	}
+//
+// 	.separator {
+// 		display: none;
+// 	}
+//
+// 	.download-all-action {
+// 		padding-left: 14px;
+// 		font-size: 14px;
+// 		color: @colorAccent;
+//
+// 		img.content-mask {
+// 			background-color: @colorAccent;
+// 		}
+//
+// 		&:hover {
+// 			cursor: pointer;
+// 		}
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Message warning bar
+// //------------------------------------------------------------
+// #message-list .show-hidden-messages {
+// 	border: none;
+// 	border-left: 3px solid @colorAccent;
+// 	border-radius: 0px;
+// 	background-color: @colorWarningBar;
+// 	color: @colorTextFaded;
+//
+// 	a {
+// 		color: @colorAccent;
+// 		cursor: pointer;
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Scroll bars
+// //------------------------------------------------------------
+// #message-list .scrollbar-track,
+// .composer-full-window .scrollbar-track {
+// 	background: @colorWindowBg;
+// 	border-left: none;
+// 	width: 10px;
+//
+// 	.scrollbar-handle {
+// 		background: fade(darken(@colorBodyBg, 45%), 40%);
+// 		border: none;
+// 	}
+// }
+//
+// .composer-full-window .scrollbar-track {
+// 	background: @colorBodyBg;
+// }
