Arc-Dark: fix color variable name in preferences

--- a/Arc-Dark/styles/preferences.less
+++ b/Arc-Dark/styles/preferences.less
@@ -517,7 +517,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 // Scrollbar
 //------------------------------------------------------------
 .column-Preferences .scrollbar-track {
-	background: @colorPrefsBodyBg;
+	background: @clrPrefsBodyBg;
 	border-left: none;
 	width: 10px;
 
