--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -152,7 +152,7 @@
 			border: 1px solid transparent;
 
 			img.content-mask {
-				background-color: @clrText;
+				background-color: @clrToolBtnText;
 			}
 		}
 
@@ -194,23 +194,40 @@
 	border: 1px solid @clrWindowBorder;
 	border-radius: 0 0 3px 3px;
 
-// 	//---------------------------------
-// 	// Reply icon/text
-// 	//---------------------------------
-// 	.footer-reply-area {
-// 		width: max-content;
-// 		margin: 9px 12px;
-// 		font-size: 14px;
-// 		color: @colorAccent;
-//
-// 		img.content-mask {
-// 			background-color: @colorAccent;
-// 		}
-//
-// 		&:hover {
-// 			cursor: pointer;
-// 		}
-// 	}
+	//---------------------------------
+	// Reply icon/text
+	//---------------------------------
+	.footer-reply-area {
+		width: max-content;
+		border: 1px solid transparent;
+		border-radius: 3px;
+		margin-bottom: 9px;
+		margin-top: 9px;
+		color: @clrToolBtnText;
+		font-size: 14px;
+		height: 2.1em;
+		line-height: 1.9em;
+		padding: 0 0.8em;
+
+		img.content-mask {
+			background-color: @clrToolBtnText;
+		}
+
+		&:hover {
+			background-color: @clrToolBtnBgHover;
+			border-color: @clrToolBtnBorderHover;
+		}
+
+		&:active {
+			background-color: @clrToolBtnBgActive;
+			border-color: @clrToolBtnBorderActive;
+			color: @clrToolBtnTextActive;
+
+			img.content-mask {
+				background-color: @clrToolBtnTextActive;
+			}
+		}
+	}
 }
 
 //------------------------------------------------------------
