Arc-Dark: message list selected stack

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -282,8 +282,20 @@
 	}
 }
 
+//------------------------------------------------------------
+// Selected messages stack
+//------------------------------------------------------------
+.selected-items-stack .selected-items-stack-content {
+	.stack .card svg {
+		stroke: @clrWindowBorder;
+		fill: @clrBodyBg;
+	}
 
-
+	.count-info .count,
+	.count-info .count-message {
+		color: @clrListTextFadedLess;
+	}
+}
 
 // #message-list .message-item-wrap {
 // 	.message-item-white-wrap {
