Arc-Dark: message list warning bar

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -39,9 +39,11 @@
 @clrTextFaded: fade(@clrText, 50%);
 @clrTextFadedLess: fade(@clrText, 80%);
 @clrTextFadedMore: fade(@clrText, 30%);
+@clrTextActive: #ffffff;
 
 @clrBodyBg: #404552;
 @clrBodyBgDarker: darken(@clrBodyBg, 2%);
+@clrWarningBar: lighten(@clrBodyBg, 5%);
 
 @clrToolBtnBgHover: rgba(95, 105, 127, 0.37);
 @clrToolBtnBorderHover: rgba(21, 23, 28, 0.37);
