Arc-Dark: draft message body, footer and buttons

--- a/Arc-Dark/styles/arc-variables.less
+++ b/Arc-Dark/styles/arc-variables.less
@@ -101,6 +101,14 @@
 @clrButtonTextActive: #ffffff;
 @clrButtonTextDisabled: fade(#d3dae3, 45%);
 
+@clrButtonDefaultBg: #4dadd4;
+@clrButtonDefaultBorder: #4dadd4;
+@clrButtonDefaultBgHover: #76c0de;
+@clrButtonDefaultBorderHover: #76c0de;
+@clrButtonDefaultBgActive: #2e96c0;
+@clrButtonDefaultBorderActive: #2e96c0;
+@clrButtonDefaultText: #ffffff;
+
 @clrSliderTrackBg: #2d303b;
 @clrSliderButtonBg: #444a58;
 @clrSliderButtonBorder: #262933;
