--- a/Arc-Dark/styles/message-draft.less
+++ b/Arc-Dark/styles/message-draft.less
@@ -1,327 +1,323 @@
 @import "arc-variables";
 
 //------------------------------------------------------------
-// Draft message (edit mode) header recipient tokens
+// Draft message (edit mode) body
 //------------------------------------------------------------
-#message-list	.tokenizing-field-input,
-.composer-full-window	.tokenizing-field-input {
-	.token {
-		//---------------------------------
-		// Normal token
-		//---------------------------------
-		box-shadow: none !important;
-		background: darken(@colorWindowBg, 6%);
-		border: 1px solid @colorBorder;
-		border-radius: 2px;
-		margin: 2px 5px 4px 1px;
-		height: 22px;
-		line-height: 1.5em;
+#message-list .message-item-wrap .message-item-white-wrap.composer-outer-wrap {
+	background: @clrBodyBg;
+	border: none;
+	box-shadow: none !important;
 
-		&:hover {
-			background: darken(@colorWindowBg, 9%);
-		}
-
-		&.selected {
-			background: fade(@colorAccent, 90%);
-			border-color: @colorAccent;
-			margin: 2px 5px 4px 1px;
-		}
-
-		&.selected:hover {
-			background: @colorAccent;
-		}
-
-		//---------------------------------
-		// Invalid recipient token
-		//---------------------------------
-		&.invalid {
-			color: @colorWarningRed;
-
-			img.content-mask {
-				background-color: @colorWarningRed;
-			}
-
-			&.selected {
-				background-color: fade(@colorWarningRed, 90%);
-				border-color: @colorWarningRed;
-				color: @colorBtnTextActive;
-
-				img.content-mask {
-					background-color: @colorBtnTextActive;
-				}
-			}
-
-			&.selected:hover {
-				background: @colorWarningRed;
-			}
-		}
+	.composer-content-wrap {
+		border: 1px solid @clrWindowBorder;
+		border-radius: 3px;
+		box-shadow: none;
 	}
-
-	//---------------------------------
-	// Edit box
-	//---------------------------------
-	input {
-		margin-top: -2px;
-	}
-}
-
-
-//------------------------------------------------------------
-// Draft message header actions
-//------------------------------------------------------------
-.composer-inner-wrap	.composer-header-actions {
-	.action {
-		&:hover {
-			color: @colorAccent;
-			cursor: pointer;
-
-			&.show-popout img.content-mask {
-				background-color: @colorAccent;
-			}
-		}
-	}
-}
-
-//------------------------------------------------------------
-// Draft message To/Cc/Bcc/Subject horizontal lines
-//------------------------------------------------------------
-.composer-participant-field:after {
-	background: @colorBorder;
-}
-
-//------------------------------------------------------------
-// Draft message signature button
-//------------------------------------------------------------
-#message-list .signature-button-dropdown,
-.composer-full-window .signature-button-dropdown {
-	.button-dropdown {
-		.only-item:hover {
-			cursor: pointer;
-
-			img.content-mask {
-				background-color: @colorAccent;
-			}
-		}
-	}
-}
-
-//------------------------------------------------------------
-// Draft message rich edit toolbar
-//------------------------------------------------------------
-
-.RichEditor-toolbar {
-	.inner {
-		background: @colorBodyBg !important;
-		padding-top: 1px;
-	}
-
-	.floating-container {
-		border-color: fade(@colorText, 30%);
-	}
-
-	//---------------------------------
-	// Buttons
-	//---------------------------------
-	button {
-		color: @colorText;
-
-		&:hover {
-			color: @colorText;
-		}
-
-		&.with-select select {
-			color: @colorText;
-
-			&:focus, &:active {
-				background-color: @colorBodyBg;
-			}
-		}
-
-		&.undefined:not(.with-select) {
-			&:hover {
-				color: @colorText;
-			}
-
-			&.active {
-				color: @colorAccent;
-			}
-		}
-	}
-
-	//---------------------------------
-	// Dividers
-	//---------------------------------
-	.divider {
-		height: 13px;
-		border-color: @colorTextFaded;
-	}
-}
-
-//------------------------------------------------------------
-// Draft message quoted text control (3 dots)
-//------------------------------------------------------------
-.quoted-text-control,
-.composer-inner-wrap .compose-body .quoted-text-control {
-	background-color: transparent;
-	border-color: transparent;
-	margin: 0 14px 14px 16px;
-
-	&:hover {
-		border-color: transparent;
-	}
-}
-
-//------------------------------------------------------------
-// Draft message footer bar
-//------------------------------------------------------------
-#message-list .message-item-wrap.draft .message-item-white-wrap {
-	background-color: @colorBodyBg;
 
 	.composer-action-bar-wrap {
-		background-color: @colorBodyBgDarker;
+		background-color: @clrWindowBg;
 		box-shadow: none;
-		border-top: 1px solid @colorBorder;
-		border-radius: 0 0 3px 3px;
+		border: none;
 	}
 
 	&.focused {
-		background-color: @colorBodyBg;
-		border: 1px solid @colorAccent;
+		background: @clrBodyBg;
+		border: none;
+		box-shadow: none !important;
+
+		.composer-content-wrap {
+			border: 1px solid @clrAccent;
+			box-shadow: inset 1px 0 @clrAccent, inset -1px 0 @clrAccent, inset 0 1px @clrAccent, inset 0 -1px @clrAccent;
+		}
 
 		.composer-action-bar-wrap {
-			background-color: @colorBodyBgDarker;
+			background-color: @clrWindowBg;
 			box-shadow: none;
-			border-top: 1px solid @colorBorder;
-			border-radius: 0 0 3px 3px;
+			border: none;
 		}
 	}
 }
 
+// New message
 .composer-full-window .composer-inner-wrap .composer-action-bar-wrap {
+	background-color: @clrWindowBg;
 	box-shadow: none;
-	background: @colorWindowBg;
-	border-top-color: @colorBorder;
+	border-top: 1px solid @clrWindowBorder;
 }
 
 //------------------------------------------------------------
 // Draft message footer buttons
 //------------------------------------------------------------
-#message-list .message-item-wrap.draft,
-.composer-full-window .composer-inner-wrap {
+.composer-inner-wrap .composer-action-bar-wrap {
 	.composer-action-bar-content {
-		button.btn-toolbar {
-			box-shadow: none;
-			background: transparent;
-			border: 1px solid transparent;
-			border-radius: 3px;
-			height: 26px;
-			padding: 0px 13px 1px !important;
+		padding: 9px 0;
+	}
+
+	.btn.btn-toolbar {
+		box-shadow: none;
+		background: @clrButtonBg !important;
+		border: 1px solid @clrButtonBorder;
+		border-radius: 3px;
+		// margin-bottom: 9px;
+		// margin-top: 9px;
+		color: @clrButtonText;
+		height: 2.1em;
+		line-height: 1.9em;
+		padding: 0 0.8em !important;
+		margin: 0 4px !important;
+
+		img.content-mask {
+			background-color: @clrButtonText !important;
+		}
+
+		&:hover {
+			background-color: @clrButtonBgHover !important;
+			border-color: @clrButtonBorderHover;
+		}
+
+		&:active,
+		&.btn-enabled {
+			background-color: @clrButtonBgActive !important;
+			border-color: @clrButtonBorderActive;
 
 			img.content-mask {
-				background-color: @colorText !important;
-			}
-
-			&:hover {
-				background: @colorBtnBgLight;
-				border-color: @colorBtnBorderLight;
-			}
-
-			&:active,
-			&.btn-enabled {
-				background: @colorBtnBgActiveLight;
-				border-color: @colorBtnBorderActiveLight;
-
-				img.content-mask {
-					background-color: @colorBtnTextActive !important;
-				}
+				background-color: @clrButtonTextActive !important;
 			}
 		}
 	}
-}
 
-//------------------------------------------------------------
-// Draft message footer send button
-//------------------------------------------------------------
-#message-list .message-item-wrap.draft,
-.composer-inner-wrap {
-	.composer-action-bar-content {
-		.btn-send {
-			background: none;
-			border: none;
+	.btn-send {
+		margin-top: 1px;
 
-			.primary-item {
-				background: @colorBtnDefaultBg;
-				box-shadow: none;
-				border: 1px solid @colorBtnDefaultBg;
-				border-radius: 3px 0px 0px 3px;
-				height: 26px;
-				// margin-top: 3px;
-				// padding-top: 1px;
-				color: @colorBtnDefaultText;
+		.primary-item,
+		.secondary-picker {
+			box-shadow: none;
+			background: @clrButtonDefaultBg;
+			border: 1px solid @clrButtonDefaultBorder;
+			color: @clrButtonDefaultText;
+			height: 2.1em;
+			line-height: 1.9em;
+			padding: 0 0.8em;
 
-				img.content-mask {
-					background-color: @colorBtnDefaultText;
-				}
+			img.content-mask {
+				background-color: @clrButtonDefaultText;
 			}
+		}
 
+		.primary-item {
+			border-radius: 3px 0px 0px 3px;
+			margin: 0 0 0 4px;
+		}
+
+		.secondary-picker {
+			border-radius: 0px 3px 3px 0px;
+			margin: 0 4px 0 0;
+
+			img.content-mask {
+				margin-top: -3px;
+			}
+		}
+
+		&:hover {
+			.primary-item,
 			.secondary-picker {
-				background: @colorBtnDefaultBg;
-				box-shadow: none;
-				border: 1px solid @colorBtnDefaultBg;
-				border-radius: 0px 3px 3px 0px;
-				height: 26px;
-				// margin-top: 1px;
-				// padding-top: 1px;
-
-				img.content-mask {
-					background-color: @colorBtnDefaultText;
-				}
+				background-color: @clrButtonDefaultBgHover;
+				border-color: @clrButtonDefaultBorderHover;
 			}
+		}
 
-			&:hover {
-				.primary-item,
-				.secondary-picker {
-					background: @colorBtnDefaultBgHover;
-					border-color: @colorBtnDefaultBgHover;
-				}
-			}
-
-			&:active {
-				.primary-item:active,
-				.secondary-picker:active {
-					background: @colorBtnDefaultBgActive;
-					border-color: @colorBtnDefaultBgActive;
-				}
-			}
+		.primary-item:active,
+		.secondary-picker:active {
+			background-color: @clrButtonDefaultBgActive;
+			border-color: @clrButtonDefaultBorderActive;
 		}
 	}
 }
 
+// New message
 .composer-full-window .composer-inner-wrap {
 	.composer-action-bar-content {
-		button.btn-send {
-			background: @colorBtnDefaultBg;
-			box-shadow: none;
-			border: 1px solid @colorBtnDefaultBg;
-			border-radius: 3px;
-			height: 26px;
-			// margin-top: 3px;
-			// padding-top: 1px;
-			color: @colorBtnDefaultText;
-
-			img.content-mask {
-				background-color: @colorBtnDefaultText !important;
-			}
-
-			&:hover {
-				background: @colorBtnDefaultBgHover;
-				border-color: @colorBtnDefaultBgHover;
-			}
-
-			&:active {
-				background: @colorBtnDefaultBgActive;
-				border-color: @colorBtnDefaultBgActive;
-			}
-		}
+		padding: 9px 12px;
 	}
 }
+
+// //------------------------------------------------------------
+// // Draft message (edit mode) header recipient tokens
+// //------------------------------------------------------------
+// #message-list	.tokenizing-field-input,
+// .composer-full-window	.tokenizing-field-input {
+// 	.token {
+// 		//---------------------------------
+// 		// Normal token
+// 		//---------------------------------
+// 		box-shadow: none !important;
+// 		background: darken(@colorWindowBg, 6%);
+// 		border: 1px solid @colorBorder;
+// 		border-radius: 2px;
+// 		margin: 2px 5px 4px 1px;
+// 		height: 22px;
+// 		line-height: 1.5em;
+//
+// 		&:hover {
+// 			background: darken(@colorWindowBg, 9%);
+// 		}
+//
+// 		&.selected {
+// 			background: fade(@colorAccent, 90%);
+// 			border-color: @colorAccent;
+// 			margin: 2px 5px 4px 1px;
+// 		}
+//
+// 		&.selected:hover {
+// 			background: @colorAccent;
+// 		}
+//
+// 		//---------------------------------
+// 		// Invalid recipient token
+// 		//---------------------------------
+// 		&.invalid {
+// 			color: @colorWarningRed;
+//
+// 			img.content-mask {
+// 				background-color: @colorWarningRed;
+// 			}
+//
+// 			&.selected {
+// 				background-color: fade(@colorWarningRed, 90%);
+// 				border-color: @colorWarningRed;
+// 				color: @colorBtnTextActive;
+//
+// 				img.content-mask {
+// 					background-color: @colorBtnTextActive;
+// 				}
+// 			}
+//
+// 			&.selected:hover {
+// 				background: @colorWarningRed;
+// 			}
+// 		}
+// 	}
+//
+// 	//---------------------------------
+// 	// Edit box
+// 	//---------------------------------
+// 	input {
+// 		margin-top: -2px;
+// 	}
+// }
+//
+//
+// //------------------------------------------------------------
+// // Draft message header actions
+// //------------------------------------------------------------
+// .composer-inner-wrap	.composer-header-actions {
+// 	.action {
+// 		&:hover {
+// 			color: @colorAccent;
+// 			cursor: pointer;
+//
+// 			&.show-popout img.content-mask {
+// 				background-color: @colorAccent;
+// 			}
+// 		}
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Draft message To/Cc/Bcc/Subject horizontal lines
+// //------------------------------------------------------------
+// .composer-participant-field:after {
+// 	background: @colorBorder;
+// }
+//
+// //------------------------------------------------------------
+// // Draft message signature button
+// //------------------------------------------------------------
+// #message-list .signature-button-dropdown,
+// .composer-full-window .signature-button-dropdown {
+// 	.button-dropdown {
+// 		.only-item:hover {
+// 			cursor: pointer;
+//
+// 			img.content-mask {
+// 				background-color: @colorAccent;
+// 			}
+// 		}
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Draft message rich edit toolbar
+// //------------------------------------------------------------
+//
+// .RichEditor-toolbar {
+// 	.inner {
+// 		background: @colorBodyBg !important;
+// 		padding-top: 1px;
+// 	}
+//
+// 	.floating-container {
+// 		border-color: fade(@colorText, 30%);
+// 	}
+//
+// 	//---------------------------------
+// 	// Buttons
+// 	//---------------------------------
+// 	button {
+// 		color: @colorText;
+//
+// 		&:hover {
+// 			color: @colorText;
+// 		}
+//
+// 		&.with-select select {
+// 			color: @colorText;
+//
+// 			&:focus, &:active {
+// 				background-color: @colorBodyBg;
+// 			}
+// 		}
+//
+// 		&.undefined:not(.with-select) {
+// 			&:hover {
+// 				color: @colorText;
+// 			}
+//
+// 			&.active {
+// 				color: @colorAccent;
+// 			}
+// 		}
+// 	}
+//
+// 	//---------------------------------
+// 	// Dividers
+// 	//---------------------------------
+// 	.divider {
+// 		height: 13px;
+// 		border-color: @colorTextFaded;
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Draft message quoted text control (3 dots)
+// //------------------------------------------------------------
+// .quoted-text-control,
+// .composer-inner-wrap .compose-body .quoted-text-control {
+// 	background-color: transparent;
+// 	border-color: transparent;
+// 	margin: 0 14px 14px 16px;
+//
+// 	&:hover {
+// 		border-color: transparent;
+// 	}
+// }
+//
+// //------------------------------------------------------------
+// // Draft message footer bar
+// //------------------------------------------------------------
+// .composer-full-window .composer-inner-wrap .composer-action-bar-wrap {
+// 	box-shadow: none;
+// 	background: @colorWindowBg;
+// 	border-top-color: @colorBorder;
+// }
+//
