Arc-Dark: message draft body text color

--- a/Arc-Dark/styles/message-draft.less
+++ b/Arc-Dark/styles/message-draft.less
@@ -397,3 +397,10 @@
 		border-color: @clrTextFadedMore;
 	}
 }
+
+//------------------------------------------------------------
+// Draft message (edit mode) body text
+//------------------------------------------------------------
+.RichEditor-root .RichEditor-content {
+	color: @clrText;
+}
