Arc-Dark: message quoted text button (3 dots)

--- a/Arc-Dark/styles/messagelist.less
+++ b/Arc-Dark/styles/messagelist.less
@@ -312,6 +312,25 @@
 }
 
 //------------------------------------------------------------
+// Quoted text button
+//------------------------------------------------------------
+.quoted-text-control {
+	background: @clrButtonBg;
+	border: 1px solid @clrButtonBorder;
+	color: @clrButtonText;
+	height: 1.7em;
+	font-size: 1em;
+	padding: 0.3em 0.7em;
+
+	&:hover {
+		background: @clrButtonBgHover;
+		border: 1px solid @clrButtonBorderHover;
+		color: @clrButtonText;
+		cursor: default;
+	}
+}
+
+//------------------------------------------------------------
 // Message attachments
 //------------------------------------------------------------
 .nylas-attachment-item,
