Arc-Dark: common styles code cleanup

--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -4,11 +4,11 @@
 // Main window
 //------------------------------------------------------------
 .sheet-container {
-	border-top: 1px solid @colorBorder;
+	border-top: 1px solid @clrWindowBorder;
 }
 
 .sheet {
-	background-color: @colorListBg;
+	background-color: @clrListBg;
 }
 
 //------------------------------------------------------------
@@ -16,10 +16,6 @@
 //------------------------------------------------------------
 .sheet-toolbar {
 	border: none;
-}
-
-body.platform-linux .sheet-toolbar-container {
-	background: @colorWindowBg;
 }
 
 //------------------------------------------------------------
