Arc-Dark: fix thread list background flashing

--- a/Arc-Dark/styles/threadlist.less
+++ b/Arc-Dark/styles/threadlist.less
@@ -19,6 +19,10 @@
 	}
 }
 
+.list-container .list-rows {
+	background: @clrListBg;
+}
+
 //------------------------------------------------------------
 // Thread list items
 //------------------------------------------------------------
