--- a/Arc-Dark/styles/common.less
+++ b/Arc-Dark/styles/common.less
@@ -21,6 +21,9 @@
 //------------------------------------------------------------
 // Controls
 //------------------------------------------------------------
+//---------------------------------
+// Input
+//---------------------------------
 input[type='text'],
 input[type='email'],
 input[type='date'],
@@ -48,6 +51,9 @@ input[type='url'] {
 	}
 }
 
+//---------------------------------
+// Button
+//---------------------------------
 .btn {
 	box-shadow: none;
 	background: @clrButtonBg;
@@ -82,6 +88,9 @@ input[type='url'] {
 	}
 }
 
+//---------------------------------
+// Select
+//---------------------------------
 select {
 	background: @clrButtonBg;
 	border: 1px solid @clrButtonBorder;
